--- a/assets/layout/styles/layout/_topbar.scss
+++ b/assets/layout/styles/layout/_topbar.scss
@@ -63,7 +63,8 @@
     }
 
     .layout-menu-button {
-        margin-left: 2rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
 
     .layout-topbar-menu-button {
